fixed borders on small accordion

--- a/includes/widgets/accordion/accordion.scss
+++ b/includes/widgets/accordion/accordion.scss
@@ -9,18 +9,38 @@ div.accordion-widget {
             margin-top: $xl;
             background-color: $white-500;
             @include elevation-low();
-            border: 1px solid $light-200;
             border-radius: $radius-l;
             overflow: hidden;
             text-align: center;
 
-            img {
-                width: 100%;
-                height: auto;
+            div.image {
+                position: relative;
+
+                img {
+                    width: 100%;
+                    height: auto;
+                    border-top-left-radius: $radius-l;
+                    border-top-right-radius: $radius-l;
+                }
             }
 
-            .button {
+            div.image:after {
+                box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.05);
+                content: '';
+                display: block;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                width: 100%;
+            }
+
+            .bottom {
                 padding: 11px 0 $s 0;
+                border-left: 1px solid $light-200;
+                border-right: 1px solid $light-200;
+                border-bottom: 1px solid $light-200;
+                border-bottom-left-radius: $radius-l;
+                border-bottom-right-radius: $radius-l;
             }
         }
     }
